# tgbot

./: .editorconfig  .gitignore  README.md  default.env  pyproject.toml
service/: __main__.py  config.py
