[tool.poetry]
name = "tgbot"
version = "0.1.0"
description = ""
authors = ["2281 <askarbin@rambler.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
python-telegram-bot = {extras = ["socks"], version = "^13.7"}
httpx = "^0.20.0"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
